# luoluo-ai

./: .gitignore  Cargo.toml  config.json
.cargo/: config.toml
src/: capture.rs  config.rs  inference.rs  input_listener.rs  main.rs  mouse_control.rs
src/capture/: inner.rs  mod.rs
