[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
usls = { version = "0.2.0-alpha.3", features = ["tensorrt-full", "nvrtx-full", "cuda", "annotator"] }
egui = "0.27"
eframe = "0.27"
windows-capture = "1.4"
rfd = "0.14"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
image = "0.25"
ndarray = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
strip = true
